--- a/index.html
+++ b/index.html
@@ -5,11 +5,28 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title> Build A Survey Form</title>
+        <!-- Added css file  -->
+        <link rel="stylesheet" href="style.css">
     </head>
+    <div class="container">
 
-    <body>
-        <h1>Hello World!, we are software developers!</h1>
+<header class="header">
+    <h1 id="title" class="text-center">Microvarse Survey Form</h1>
+    <p id="description" class="description text-center">
+        Thanks for taking the time to help us improve the platform
+    </p>
+</header>
+<form id="survey-form">
+    <div class="form-group">
+        <label id="name-label" for="name">Name</label>
+        <input type="text" name="name" id="name" class="form-control" placeholder="Enter your name" required />
+    </div>
+    <div class="form-group">
+        <label id="email-label" for="email">Email</label>
+        <input type="email" name="email" id="email" class="form-control" placeholder="Enter your Email" required />
+    </div>
+    </div>
     </body>
 
 </html>
