--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                     <label id="email-label" for="email">Email</label>
                     <input type="email" name="email" id="email" class="form-control" placeholder="Enter your Email" required />
                 </div>
-        </div>
 
 
         <div class="form-group">
@@ -66,6 +65,42 @@
         <option value="openSource">Level up</option>
     </select>
     </div>
+
+<div class="form-group">
+    <p>
+        What would you like to see improved?
+        <span class="clue">(Check all that apply)</span>
+    </p>
+    <label>
+        <input name="prefer" value="front-end-projects" type="checkbox" class="input-checkbox" />Front-end
+        Projects
+    </label>
+    <label>
+        <input name="prefer" value="back-end-projects" type="checkbox" class="input-checkbox" />Back-end
+        Projects
+    </label>
+    <label>
+        <input name="prefer" value="data-visualization" type="checkbox" class="input-checkbox" />Data
+        Visualization
+    </label>
+    <label><input name="prefer" value="challenges" type="checkbox" class="input-checkbox" />JS Challenges</label>
+    <label>
+        <input name="prefer" value="open-source-community" type="checkbox" class="input-checkbox" />Level up
+        Community
+    </label>
+    <label>
+        <input name="prefer" value="gitter-help-rooms" type="checkbox" class="input-checkbox" />Slack help
+        rooms
+    </label>
+    <label><input name="prefer" value="videos" type="checkbox" class="input-checkbox" />Videos</label>
+    <label><input name="prefer" value="city-meetups" type="checkbox" class="input-checkbox" />City Meetups</label>
+    <label><input name="prefer" value="wiki" type="checkbox" class="input-checkbox" />Wiki</label>
+    <label><input name="prefer" value="forum" type="checkbox" class="input-checkbox" />Forum</label>
+    <label>
+        <input name="prefer" value="additional-courses" type="checkbox" class="input-checkbox" />Additional
+        Courses
+    </label>
+</div>
 
         </div>
     </body>
